--- a/recompensa(admi).css
+++ b/recompensa(admi).css
@@ -78,7 +78,7 @@ nav a {
 }
 
 .recompensa {
-    background-color: #ffffff;
+    background-color: #e6f3d946 !important;
     padding: 15px;
     border-radius: 8px;
     width: 250px;
@@ -143,30 +143,35 @@ nav a {
 /* Estilo Modal */
 /* Add these styles to your CSS file */
 .modal {
-    display: none;
+   display: none;
     position: fixed;
     z-index: 700;
     left: 0;
-    top: 0;
+    top: 0px;
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.8);
     animation: fadeIn 0.4s ease;
     backdrop-filter: blur(8px);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-contenido {
-    background: linear-gradient(165deg, #ffffff, #f8f9fa);
-    margin: 3% auto;
+   background: linear-gradient(165deg, #ffffff, #f8f9fa);
     padding: 35px;
     width: 92%;
-    max-width: 350px;
+    max-width: 300px;
     border-radius: 25px;
     box-shadow: 0 15px 40px rgba(0,0,0,0.3);
-    transform: translateY(-50px);
     animation: slideIn 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
     position: relative;
+    max-height: 90vh;
     overflow: hidden;
+    flex-direction: column;
+    display: flex;
 }
 
 .modal-contenido::before {
@@ -195,7 +200,7 @@ nav a {
 .modal-contenido input[type="number"],
 .modal-contenido textarea {
     width: 100%;
-    padding: 16px;
+    padding: 15px;
     margin: 15px 0;
     border: 2px solid #e9ecef;
     border-radius: 15px;
