--- a/recompensa(admi).css
+++ b/recompensa(admi).css
@@ -11,7 +11,7 @@ body {
 }
 
 header nav {
-    background: linear-gradient(90deg, #2ecc71, #27ae60);
+   border: 1px solid #effcf6;
     color: #fff;
     padding: 8px 20px;
     display: flex;
