--- a/recompensa(admi).css
+++ b/recompensa(admi).css
@@ -160,7 +160,8 @@ nav a {
 }
 
 .modal-contenido {
-   background: linear-gradient(165deg, #ffffff, #f8f9fa);
+    background-color: rgba(230, 243, 217, 0.27) !important; /* equivale a #e6f3d946 */
+    background-image: none !important;
     padding: 35px;
     width: 92%;
     max-width: 300px;
@@ -207,7 +208,7 @@ nav a {
     font-size: 16px;
     transition: all 0.4s ease;
     background: rgba(255, 255, 255, 0.95);
-    color: #2c3e50;
+    color: rgb(14, 14, 14);
 }
 
 .modal-contenido input:focus,
