--- a/estilousuario.css
+++ b/estilousuario.css
@@ -22,6 +22,15 @@ body::before {
 }
 
 
+.alert {
+    max-width: 90%;
+    width: 500px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+
+
+
 .card-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
