--- a/recompensa(admi).css
+++ b/recompensa(admi).css
@@ -1,13 +1,24 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    height: 100vh;
     margin: 0;
-    padding: 0;
-    background-image: url(fondoauto.jpg);
+    justify-content: center;
+    align-items: center;
+    background: url(images/fonfi.jpeg) no-repeat center center;
     background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     background-attachment: fixed;
-    color: rgb(0, 0, 0);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: relative;
+}
+
+body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: -1;
 }
 
 header nav {
@@ -299,27 +310,6 @@ nav a {
     transform: rotate(180deg) scale(1.2);
 }
 
-@keyframes gradientMove {
-    0% { background-position: 100% 0; }
-    100% { background-position: -100% 0; }
-}
-
-@keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-
-@keyframes slideIn {
-    0% { 
-        transform: translateY(-70px);
-        opacity: 0;
-    }
-    100% { 
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
 .modal-contenido input[type="text"],
 .modal-contenido input[type="number"],
 .modal-contenido textarea {
@@ -413,20 +403,7 @@ titulo{
     text-align: center;
     flex-grow: 1;    
 }
-@keyframes fade-in {
-    from {
-        opacity: 0;
-        transform: translateY(-50px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
 
-body {
-    animation: fade-in 2s ease-in-out;
-}
 
 /* Estilos adicionales para el botón de inicio */
 nav a {
@@ -623,26 +600,6 @@ nav a:hover {
     transform: rotate(180deg) scale(1.2);
 }
 
-@keyframes gradientMove {
-    0% { background-position: 100% 0; }
-    100% { background-position: -100% 0; }
-}
-
-@keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-
-@keyframes slideIn {
-    0% { 
-        transform: translateY(-70px);
-        opacity: 0;
-    }
-    100% { 
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
 
 .modal-contenido input[type="text"],
 .modal-contenido input[type="number"],
@@ -737,17 +694,4 @@ titulo{
     text-align: center;
     flex-grow: 1;    
 }
-@keyframes fade-in {
-    from {
-        opacity: 0;
-        transform: translateY(-50px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
 
-body {
-    animation: fade-in 2s ease-in-out;
-}
