--- a/estilo(buscar).css
+++ b/estilo(buscar).css
@@ -282,7 +282,7 @@ body {
         }
 
         .usuario-info h2 {
-            color: #125c07;
+            color: white;
             font-size: 24px;
             margin-bottom: 10px;
             font-weight: bold;
