--- a/estilo(supervisor).css
+++ b/estilo(supervisor).css
@@ -77,7 +77,7 @@ body::before {
 .card {
     width: 280px;
     height: 400px;
-    background: #e0f0e9;
+    background: rgba(255, 255, 255, 0.274);
     border-radius: 40px;
     box-shadow: 3px 1px 3px #00000092;
     padding: 3px; /* Reduce el padding */
